lab1/Test/L1-A-7-98.output
Error Type A at Line 20
Error Type A at Line 27
Error Type A at Line 37
