lab1/Test/L1-A-7-98.cmm
struct DVgaT ;
struct {
  struct JjTUeOseBQDR7 {
    int TM0A0mJJi ;
  }ixWLN ;
  int R6F ;
};
struct {
  struct iazL0 em10z9 , s3Di8lhu6lUhyINAv = JpiY ;
}KHKQlotBRqmoVMKrfl 
;
float b ( ) {
  while ( xUGocH15zCOQnL )   return tb1Wum9bzpEXK9ORyz 
    = woC || IW7pe19lhEuqzb <= qzyy4g1H0qmKUVcs / - ( 
    Ozqc && EDLY3uh7WLiQF5hH == qLfm8_rad9z + MgBNT4NX5hOmdW_ 
    * ! e2MJDg [ jHoSfLa = pEiqHr || otQ_pPzN41HK_O >= 
    yhrzJcFZGZQBL ( bY , Ooz && JT < YYsAp_Ri5FKw5S [ 
    ioq_jyexoaCQRxB_AYvL || wZbb3 - dQlw38fHrmAvU ( VcCOmutOyyRuX 
    && ZLoXQ2Oh5M8 != a5an18LtCyQ2hVGLjC * YUm_mVAE4RF43uL6 
    $) > 2044521429.661115637 ] + ! 2046058163 ) ] . PerJt1x1VwHDJVqX 
    - ! ejQ40J8 ( ) ) ;

}
int uk_zmPTy39Ru , B6Xe [ 1307805758 ] 

;
#int Pg6o4glCzQINgzdBjO ( int KW86SPk6VxGPcl ) {
}
int ;
int ;
int ;
int ;
int ;
int GEbsaRvgINydtX ( int nf3_GzI , int zb361mgsbdrlcy5R_KbX 
  ) {
  if ( h )   if ( GH3B7UpmbKuRyfRxTN )   htKKDOXDhBGmRQ 
    ;$
else   TbcPs47U ;

else   if ( r3gFe_Ec9hRsnV5cuE ) {
    c1jC52fYnU ;
  }

}
int kCKp1JCueh ( ) {
}
int ;
int XaOJ ( ) {
}
